# UAV-slam-exploration

./: .gitignore  CMakeLists.txt  package.xml
launch/: orb_slam2_ARDroneFrontCamera.launch  orb_slam2_ARDroneFrontCamera_rosbagRecord.launch  slam_exploration.launch  slam_exploration_life.launch
resource/: ARDroneFrontCamera.yaml
rviz/: orb_slam2_config.rviz
src/: waypoint_generator.cpp
